[package]
name = "gh-stack"
version = "0.1.7"
authors = ["Timothy Andrew <mail@timothyandrew.net>", "Howie Benefiel <me@howinator.io"]
license = "MIT"
repository = "https://github.com/howinator/gh-stack"
readme = "README.md"
edition = "2021"
description = "Manage stacked PR workflows on Github"
keywords = ["github", "code-review", "stacked-pr"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.31"
petgraph = "0.6.5"
regex = "1"
git2 = "0.19.0"
dialoguer = "0.11.0"
clap = { version="4.5.21", features = ["derive"] }
console = "0.11"
dotenv = "0.15"
